# supercomputer-technologies

./: .gitignore  CMakeLists.txt  README.md
assignments/assignment4/: CMakeLists.txt  README.md
assignments/assignment4/doc/: overview.md
assignments/assignment4/include/assignment4/: cli.h  logger.h  pingpong.h  sizes.h
assignments/assignment4/src/: cli.cpp  logger.cpp  main.cpp  pingpong.cpp  sizes.cpp
assignments/assignment4/tests/: unit_tests.cpp
assignments/assignment5/: CMakeLists.txt  README.md
assignments/assignment5/doc/: overview.md
assignments/assignment5/include/assignment5/: cli.h  dist.h  logger.h  matrix.h
assignments/assignment5/src/: cli.cpp  dist.cpp  logger.cpp  main.cpp  matrix.cpp
assignments/assignment5/tests/: unit_tests.cpp
programs/: assignment1.cpp  assignment2.cpp  assignment3_task1.cpp  assignment3_task2.cpp  assignment4.cpp  assignment5.cpp
